Correção de erros na função load_dataset

--- a/intelivix_teste_pratico.ipynb
+++ b/intelivix_teste_pratico.ipynb
@@ -24,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "from urllib import request\n",
     "\n",
@@ -36,15 +37,17 @@
     "        raise Exception(\"Dataset não encontrado.\")\n",
     "    \n",
     "    try:\n",
-    "        with open('datasets/'+ dataset +'.json', 'r') as f:\n",
+    "        with open('./datasets/'+ dataset +'.json', 'r') as f:\n",
     "            return json.load(f)\n",
     "\n",
     "    except IOError:\n",
+    "        if not os.path.exists('./datasets'):\n",
+    "            os.mkdir('datasets')\n",
+    "        \n",
     "        print(\"Baixando o %s...\" % dataset)\n",
     "        \n",
-    "        url = 'https://s3.amazonaws.com/intelivix-datasets/testes_praticos/'+ dataset +'.json'\n",
-    "        \n",
-    "        request.urlretrieve(url, 'datasets/'+ dataset +'.json')\n",
+    "        request.urlretrieve('https://s3.amazonaws.com/intelivix-datasets/testes_praticos/'+ dataset +'.json',\n",
+    "                            './datasets/'+ dataset +'.json')\n",
     "        \n",
     "        return load_dataset(dataset)"
    ]
@@ -86,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f24df39ac88>"
+       "<pymongo.results.InsertManyResult at 0x7f49595af108>"
       ]
      },
      "execution_count": 5,
